--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -732,7 +732,7 @@
  brainslug_hive_desc:0 "This world is having issues acclimatizing to our recent symbiosis with neural slugs."
  predatory_plants:0 "Predatory Plants"
  predatory_plants_desc:0 "Vicious megaflora dominates this planet's landscape, creating opportunities for research, but also dangerous obstacles for any inhabitants."
- living_sea:0 "Sea of Consciousness"
+ living_sea:0 "ทะเลมีชีวิต"
  living_sea_desc:0 "Though the nature of this planet's sea eludes us, it is somehow, unquestionably, alive. Thoughts, visions, and impulses like soft songs dance in the minds of organic beings who come into contact with it."
  scavenger_bot_power:0 "Scavenger Power"
  elderly_tiyanki_power:0 "Tiyanki Matriarch Power"
