--- a/mod/thmod/localisation/english/grand_archive_l_english.yml
+++ b/mod/thmod/localisation/english/grand_archive_l_english.yml
@@ -1025,7 +1025,7 @@
  CRITTER_CATEGORY_BEHAVIOUR_TT: "Reproduction: $BEHAVIOUR|H$"
  CRITTER_SEXUAL_BEHAVIOUR: "Sexual"
  CRITTER_ASEXUAL_BEHAVIOUR: "Asexual"
- CRITTER_CATEGORY_HABITAT_TT: "Preferred habitat: $HABITAT|H$"
+ CRITTER_CATEGORY_HABITAT_TT: "ที่อยู่อาศัยที่ต้องการ: $HABITAT|H$"
  CRITTER_CATEGORY_CULL_REWARD_TT: "Culling reward: $RESOURCE|H$"
  MESSAGE_NEW_GENETIC_MATERIAL_TITLE: "New Genetic Material Acquired"
  MESSAGE_NEW_GENETIC_MATERIAL_DESC: "We have obtained $RARITY$ $CATEGORY$ $w_dna$."
@@ -2322,7 +2322,7 @@
  tech_combat_computers_bio_integration: "คอมพิวเตอร์ต่อสู้ชีวภาพ"
  tech_combat_computers_bio_integration_desc: "We can develop specialized neurochips to influence the behavior of space fauna involved in wide scale fleet combat."
  tech_combat_computers_bio_integration_effect: "§HUnlocks Feature:§! Combat Computers upgrades for Space Fauna"
- PREFERRED_HABITAT: "§SPreferred Habitat: §!$HABITAT$$TABBED_NEW_LINE$Creatures in their preferred habitat have 50% reduced upkeep."
+ PREFERRED_HABITAT: "§Sที่อยู่อาศัยที่ต้องการ: §!$HABITAT$$TABBED_NEW_LINE$สิ่งมีชีวิตที่อยู่ในแหล่งที่อยู่อาศัยที่ต้องการ จะมีค่าดูแลรักษาลดลง 50%"
  NEBULA: "Nebula"
  BREEDING_STATUS: "Reproductive Status: "
  CRITTER_BREEDING_STATUS_LACKING_MATURITY: "$BREEDING_STATUS$§gLacking Maturity§!"
