--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -3761,7 +3761,7 @@
  market_nominee_boosted_1_desc:1 ""
  market_nominee_boosted_2:0 "Rating Boost: §YSpecial Economic Region§!"
  market_nominee_boosted_2_desc:1 ""
- pm_study_the_sea:0 "Living Sea Study"
+ pm_study_the_sea:0 "การเรียนรู้ชีวิตใต้ท้องทะเล"
  pm_study_the_sea_desc:0 "A low-orbit research team is currently studying the strange sea on this planet."
  racket_energy_extractor:0 "Racket Energy Extractor"
  racket_energy_extractor_desc:0 "A satellite of arcane engineering created by the Racket Industrial Enterprise hangs in orbit of this astral body, heightening possibilities for energy extraction from its surface."
