--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -156,17 +156,17 @@
  XENOIST_BENEVOLENT_SUBJUGATION_POLICY:0 "นโยบายปกครองบริวารด้วยความเมตตา"
  XENOIST_ADOPT_BENEVOLENT_SUBJUGATION_POLICY:0 "$XENOIST_BENEVOLENT_SUBJUGATION_POLICY$"
  XENOIST_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "Taking care of our subjects and helping them grow will please the [Root.GetName]."
- XENOIST_XENOLOGICAL_CONSERVATION:0 "Xeno Zoological Conservation"
+ XENOIST_XENOLOGICAL_CONSERVATION:0 "การอนุรักษ์สัตว์ต่างดาว"
  XENOIST_NO_XENOLOGICAL_CONSERVATION:0 "$XENOIST_XENOLOGICAL_CONSERVATION$"
- XENOIST_XENOLOGICAL_CONSERVATION_DESC:0 "Building an $building_xeno_zoo$ in the spirit of scientific study and preservation will please the [root.GetName]."
+ XENOIST_XENOLOGICAL_CONSERVATION_DESC:0 "การสร้าง $building_xeno_zoo$ ด้วยจิตวิญญาณแห่งการศึกษาทางวิทยาศาสตร์และการอนุรักษ์จะทำให้ [root.GetName] พึงพอใจ"
  IMPERIALIST_PHILOSOPHY:0 "การทูตเชิงรุก"
  IMPERIALIST_PHILOSOPHY_DESC:2 "Failing to allow for offensive warfare will displease the [Root.GetName]."
  IMPERIALIST_NO_PHILOSOPHY:0 "$IMPERIALIST_PHILOSOPHY$"
  IMPERIALIST_CONQUEST:2 "การพิชิต"
  IMPERIALIST_CONQUEST_DESC:1 "การพิชิตดาวเคราะห์ต่างดาวจะทำให้ [Root.GetName] พอใจชั่วระยะเวลาหนึ่ง"
  IMPERIALIST_NO_CONQUEST:0 "$IMPERIALIST_CONQUEST$"
- IMPERIALIST_FRONTIER_OUTPOSTS:0 "Border Expansion"
- IMPERIALIST_FRONTIER_OUTPOSTS_DESC:1 "Constructing a §YFrontier Outpost§! to expand our territory will please the [Root.GetName] for a time."
+ IMPERIALIST_FRONTIER_OUTPOSTS:0 "การขยายพรมแดน"
+ IMPERIALIST_FRONTIER_OUTPOSTS_DESC:1 "การสร้าง §Yสถานีด่านหน้าชายแดน§! เพื่อขยายดินแดนของเราจะทำให้ [Root.GetName] พอใจไปชั่วขณะหนึ่ง"
  IMPERIALIST_NO_RECENT_FRONTIER_OUTPOSTS:0 "$IMPERIALIST_FRONTIER_OUTPOSTS$"
  IMPERIALIST_RIVALS1:0 "การแข่งขันในท้องถิ่น"
  IMPERIALIST_RIVALS_DESC1:1 "เป็นคู่แข่งกับจักรวรรดิอื่นอย่างน้อย §Y1 จักรวรรดิ§! จะทำให้ [Root.GetName] พอใจ"
@@ -180,9 +180,9 @@
  IMPERIALIST_OVERLORD:0 "จักรวรรดิมหาอำนาจ"
  IMPERIALIST_NOT_OVERLORD:0 "$IMPERIALIST_OVERLORD$"
  IMPERIALIST_OVERLORD_DESC:0 "ตั้งตนเป็น §Yเจ้าเหนือหัว§! ของจักรวรรดิอื่นอย่างน้อยหนึ่งจักรวรรดิอำนาจ จะทำให้ [Root.GetName] พอใจ"
- IMPERIALIST_SUPREMACY_TRADITION:0 "Traditional Supremacy"
+ IMPERIALIST_SUPREMACY_TRADITION:0 "วัฒนธรรมความยิ่งใหญ่"
  IMPERIALIST_NO_SUPREMACY_TRADITION:0 "$IMPERIALIST_SUPREMACY_TRADITION$"
- IMPERIALIST_SUPREMACY_TRADITION_DESC:0 "Adopting any Traditions emphasizing §YSupremacy§! will please the [Root.GetName]."
+ IMPERIALIST_SUPREMACY_TRADITION_DESC:0 "ปรับใช้วัฒนธรรม §Yความยิ่งใหญ่§! จะทำให้ [Root.GetName] พอใจ"
  IMPERIALIST_SLAYER:0 "เลวีอาธานสเลเยอร์"
  IMPRERIALIST_NOT_SLAYER:0 "$IMPERIALIST_SLAYER$"
  IMPERIALIST_SLAYER_DESC:1 "Destroying a space-dwelling §YLeviathan§! will please the [Root.GetName]."
@@ -475,19 +475,19 @@
  FACTION_ACTION_TYRANNIZE_TOOLTIP:0 "Adds the §YTyrannized§! modifier to all Pops of the §Y[Root.GetName]§!, severely decreasing Happiness.\n"
  FACTION_ACTION_TYRANNIZE_INVALID:0 "We may only tyrannize our subject once every six months, lest it become an ineffective tool."
  ACCEPT_DEMANDS_NO_ACTIVE_DEMANDS:1 "§RThis Faction currently has no Issues§!"
- SUPPORT_EFFECT_RADICALIZATION:0 "Radicalization Risk"
+ SUPPORT_EFFECT_RADICALIZATION:0 "ความเสี่ยงจากความรุนแรง"
  SUPPORT_EFFECT_RADICALIZATION_DESC:0 "A surge in radical rhetoric increases the faction's Militancy."
  SUPPORT_EFFECT_REVOLT:0 "ความเสี่ยงในการก่อกบฏ"
  SUPPORT_EFFECT_REVOLT_DESC:0 "The faction stages an armed uprising on a colony."
- SUPPORT_EFFECT_RIOT:0 "Riot Risk"
+ SUPPORT_EFFECT_RIOT:0 "ความเสี่ยงจากการจลาจล"
  SUPPORT_EFFECT_RIOT_DESC:1 "The faction riots, ruining property on a colony."
  POP_FACTION_NO_DEMANDS:1 "ไม่มีประเด็นความต้องการ"
  POP_FACTION_NO_DEMANDS_DESC:1 "The $FACTION$ are devoted to the $COUNTRY$ and have no Issues to consider."
  POP_FACTION_NO_CURRENT_DEMANDS:1 "ยังไม่มีประเด็นความต้องการ"
  POP_FACTION_NO_CURRENT_DEMANDS_DESC:1 "The $FACTION$ have no Issues to consider at this time."
- POP_FACTION_NO_EFFECTS:0 "No effects"
+ POP_FACTION_NO_EFFECTS:0 "ไม่มีผลใดๆ"
  POP_FACTION_NO_EFFECTS_DESC:0 "The $FACTION$ will never have any effects."
- POP_FACTION_NO_CURRENT_EFFECTS:0 "No current effects"
+ POP_FACTION_NO_CURRENT_EFFECTS:0 "ไม่มีผลในปัจจุบัน"
  POP_FACTION_NO_CURRENT_EFFECTS_DESC:0 "The $FACTION$ have no effects at this time."
  faction_demand_HAPPY_WE_RULE:0 "ผู้ปกครองมีจริยธรรมตรงกับกลุ่มการเมือง"
  faction_demand_HAPPY_WE_RULE_desc:0 "มีผู้ปกครองที่มีจริยธรรมทำให้ [Root.GetName] พอใจ"
